syntax = "proto3";
package book;
option go_package = "github.com/dedidot/grpc-book-client-streaming/proto";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  bool is_read = 4;
}

message GetBookRequest {
  Book book = 1;
}

message GetBookResponse {
  bool status = 1;
  string message = 2;
}

service BookService {
  rpc AddBook(stream GetBookRequest) returns (GetBookResponse);
}